fix: nav and footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br>
         <h4>Check out how old english turns out to be!</h4>
         <br>
-        <h6>(note: This translation only works 5 times an hour because this is not my server, <br> i've just borrowed the server link. so it gives a pop-up saying, <br> "Something is wrong with the server! Try after some time")</h6>
+        <h6>(note: This translation only works 5 times an hour because this is not my server, i've just borrowed the server link. so it gives a pop-up saying, "Something is wrong with the server! Try after some time")</h6>
     </footer>
 </body>
 </html>
