--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <nav>
         <h1 class="heading">Old English Translator</h1>
     </nav>
-    <div class="container">
-    <textarea id="txt-input" class="txt-input" placeholder="Drop text to convert it to Old English"></textarea>
-    <button id="translate-btn" class="translate-btn">Translate</button>
-    <div class="output-pointer"><h3>Converted text will appear here 👇</h3></div>
-    <div id="output" class="output"></div>
+    <div class="old-book-img">
+        <div class="container">
+            <textarea id="txt-input" class="txt-input" placeholder="Drop text to convert it to Old English"></textarea>
+            <button id="translate-btn" class="translate-btn">Translate</button>
+            <div class="output-pointer"><h3>Converted text will appear here 👇</h3></div>
+            <div id="output" class="output"></div>
+            </div>
     </div>
     <footer class="footer">
         <h3>Do you like Old English?</h3>
